--- a/package.json
+++ b/package.json
@@ -93,6 +93,9 @@
     "typedoc": "^0.19.0",
     "typescript": "4.2.3"
   },
+  "resolutions": {
+    "merge":"^2.1.1"
+  },
   "files": [
     "build/main",
     "build/module",
