--- a/package.json
+++ b/package.json
@@ -109,7 +109,9 @@
     "typescript": "4.2.3"
   },
   "resolutions": {
-    "merge": "^2.1.1"
+    "merge": "^2.1.1",
+    "trim-newlines": "^3.0.1",
+    "normalize-url": "^4.5.1"
   },
   "files": [
     "build/main",
