--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
   "resolutions": {
     "merge": "^2.1.1",
     "trim-newlines": "^3.0.1",
-    "normalize-url": "^4.5.1"
+    "normalize-url": "^4.5.1",
+    "browserslist": "^4.16.5"
   },
   "files": [
     "build/main",
