--- a/package.json
+++ b/package.json
@@ -114,7 +114,9 @@
     "merge": "^2.1.1",
     "trim-newlines": "^3.0.1",
     "normalize-url": "^4.5.1",
-    "browserslist": "^4.16.5"
+    "browserslist": "^4.16.5",
+    "set-value": "^4.0.1",
+    "path-parse": "^1.0.7"
   },
   "files": [
     "build/main",
